overflow correction

--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ html{
 
 body{
     min-height: 100%;
+    min-width:100%;
+    overflow-x:hidden;
 }
 
 .container{
